[build-system]
requires = [
    "setuptools",
    "cython>=0.25",
    "numpy==1.15.0; python_version<='3.7' and platform_machine=='x86_64'",
    "numpy==1.17.3; python_version=='3.8' and platform_machine=='x86_64'",
    "numpy==1.19.3; python_version=='3.9' and platform_machine=='x86_64'",
    "numpy==1.19.2; python_version<='3.9' and platform_machine=='aarch64'",
    "numpy; platform_machine!='x86_64' and platform_machine!='aarch64'",
    "numpy; python_version>='3.10'",
]
build-backend = "setuptools.build_meta"
