[build-system]
requires = [
    "setuptools",
    "cython>=0.25,<3.0",
    "numpy>=1.15.0; python_version < '3.9'",
    "numpy>=1.25.0; python_version >= '3.9'",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { BLIS_ARCH="generic" BLIS_COMPILER="clang -arch arm64" }
